# kvx

./: Cargo.toml  README.md  arch.txt
crates/kvx/: Cargo.toml
crates/kvx-cli/: Cargo.toml
crates/kvx-cli/src/: main.rs
crates/kvx-core/: Cargo.toml
crates/kvx-core/src/: backend.rs  command.rs  connection.rs  driver.rs  error.rs  execute.rs  execute_ext.rs  executor.rs  handler.rs  kv.rs  lib.rs  operation.rs  store.rs
crates/kvx-core/src/commands/: delete.rs  get.rs  mod.rs  set.rs
crates/kvx-core/src/protocol/: request.rs  response.rs
crates/kvx-driver-redis/: Cargo.toml
crates/kvx-driver-redis/examples/: redis_get.rs
crates/kvx-driver-redis/src/: backend.rs  client.rs  delete.rs  driver.rs  factory.rs  get.rs  lib.rs  options.rs  put.rs  set.rs
crates/kvx-driver-redis/tests/: get.rs
crates/kvx-driver-workers/: Cargo.toml
crates/kvx-driver-workers/examples/: basic.rs
crates/kvx-driver-workers/src/: backend.rs  client.rs  delete.rs  driver.rs  get.rs  lib.rs  options.rs  set.rs
crates/kvx-types/: Cargo.toml
crates/kvx-types/src/: entry.rs  key.rs  lib.rs  metadata.rs  value.rs
crates/kvx-types/src/operation/: delete.rs  get.rs  mod.rs  put.rs  set.rs
crates/kvx/examples/: basic.rs
crates/kvx/src/: connection.rs  lib.rs
docs/: design-principles.md  drivers.md  operations.md  redis.md
examples/redis/: Cargo.toml
examples/redis/src/: main.rs
examples/workers/: Cargo.toml  wrangler.toml
examples/workers/src/: lib.rs
