# Cargo.toml

[workspace]
resolver = "2"

members = [
    "crates/kvx",
    "crates/kvx-core",
    "crates/kvx-types",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/yourname/kvx"
version = "0.1.0"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
async-trait = "0.1"
