[workspace]
resolver = "2"

members = [
    "crates/kvx",
    "crates/kvx-core", "crates/kvx-driver-redis",
    "crates/kvx-types",
    "crates/kvx-driver-redis", "crates/kvx-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
bytes = "1.10"
thiserror = "2"
