[workspace]
resolver = "2"

members = [
    "crates/kvx-core",
    "crates/kvx-driver-redis",
    "crates/kvx-types",
    "crates/kvx-cli", "crates/kvx",
    "crates/kvx-driver-workers",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tokio = { version = "1", features = ["full"] }