[package]
name = "kvx-driver-redis"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kvx-core = { path = "../kvx-core" }
kvx-types = { path = "../kvx-types" }

async-trait.workspace = true
tokio.workspace = true

redis = { version = "0.27.6", features = ["tokio-comp"] }